<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Antresol</string>
    <string name="action_settings">Settings</string>

    <string name="error_message_default">Something happened</string>

    <string name="currency_uah">UAH</string>

    <string name="category"></string>
    <string name="category_hint">Укажите категорию для того, что бы люди могли найти ваш товар быстрее</string>
    <string name="add_phone">Контактный телефон</string>
    <string name="ad_info">Информация о товаре</string>
    <string name="ad_short_desc_hint">Краткое описание (140 символов)</string>
    <string name="ad_title_hint">Введите название</string>
    <string name="price">Стоимость</string>
    <string name="price_default_hint">00</string>
    <string name="want">Хочу</string>

    <string name="seller">Продавец</string>
    <string name="activity">Активность</string>
    <string name="create_ad">Подать товар</string>
    
    <string name="login">Вход</string>
    <string name="my_profile">Профайл</string>
    <string name="favorite">Избранное</string>
    <string name="msg">Сообщения</string>
    <string name="find_friends">Найти друзей</string>
    <string name="login_fb">Войти с помощью Facebook</string>
    <string name="login_vk">Войти с помощью Вконтакте</string>

    <string name="app_id">669238399825427</string>

    <string name="create_ad_info">Создайте объявление\nза 30 секунд</string>

    <string name="create_ad_on_antresol">Разместить на Антресоль</string>

    <string name="comments_hint">Оставить комментарий</string>
    <string name="send">Отправить</string>
    <string name="comments_amount">0 комментариев</string>

    <string name="add_photo">Добавить фото</string>

    <string name="select_category">Выбрать категорию</string>

    <string name="add_main_photo">Добавить главное фото</string>
</resources>
